# Squatchtodo

./: .gitignore  PROJECT.md  pyproject.toml
deploy/: backup-daily.sh  backup-hourly.sh  backup-weekly.sh  backup.env.example  config.example.toml  install.sh  snh-client.example.toml  squatchtodo-backup-daily.service  squatchtodo-backup-daily.timer  squatchtodo-backup-hourly.service  squatchtodo-backup-hourly.timer  squatchtodo-backup-weekly.service  squatchtodo-backup-weekly.timer  squatchtodo.service
scripts/: bootstrap.py
squatchtodo/: api.py  config.py  db.py  identity.py  main.py  mcp_server.py  models.py  repository.py  web.py
squatchtodo/migrations/: 001_initial.sql
squatchtodo/static/: style.css
squatchtodo/templates/: base.html  index.html  project_detail.html  search.html  todo_detail.html
squatchtodo/templates/partials/: _macros.html  note_entry.html  todo_node.html
tests/: test_api.py  test_backup.py  test_bootstrap.py  test_mcp_server.py  test_repository.py  test_snh_client_example.py  test_web.py
